# GripperUserInterface

./: .gitignore  index.html  live-ui-editor.babel-plugin.js  package.json  vite.config.ts
.github/workflows/: release.yml
public/meshes/: base_link.STL  link1.STL  link2.STL  motor.STL  p1.STL  p2.STL
public/urdf/: paeallel gripper.csv  paeallel gripper.urdf
src/: App.tsx  constants.ts  main.tsx  scriptRunner.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ControlTab.tsx  Currentchart.tsx  DeviceInfoTab.tsx  ForceChart.tsx  GripperViewer.tsx  Grippersvg.tsx  Header.tsx  ModbusTab.tsx  Positionchart.tsx  SimplecontrolTab.tsx  Simplecontroltab.tsx  StatusBar.tsx
