[package]
name    = "gripperuserinterface"
version = "0.1.0"
edition = "2021"

[lib]
name       = "gripperuserinterface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-store  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-opener = "2"
tauri-plugin-tcp    = "0.1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

tokio        = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.14", features = ["rtu"] }
tokio-serial = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
